--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,24 @@ authors = ["huntzhan <huntzhan.dev@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+# TODO: Will support all python versions in the future
+# by using https://github.com/python-best-practices/wheel-compiler
+python = "^3.7"
 flask = "^1.1.1"
 requests = "^2.22.0"
 PyGithub = "^1.45"
-portalocker = "^1.5.2"
+toml = "^0.10.0"
+filelock = "^3.0.12"
+shortuuid = "^0.5.0"
+fire = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 yapf = "^0.29.0"
 pylint = "^2.4.4"
+
+[tool.poetry.scripts]
+github_upload_package = "github_powered_pypi.pkg_repos.github:github_upload_package_cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
