--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "github-powered-pypi"
+name = "private-pypi"
 version = "0.1.0"
 description = "A private PyPI server powered by GitHub."
 license = "MIT"
@@ -25,7 +25,7 @@ yapf = "^0.29.0"
 pylint = "^2.4.4"
 
 [tool.poetry.scripts]
-github_upload_package = "github_powered_pypi.pkg_repos.github:github_upload_package_cli"
+github_upload_package = "private_pypi.pkg_repos.github:github_upload_package_cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
