--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ shortuuid = "^0.5.0"
 fire = "^0.2.1"
 Jinja2 = "^2.11.1"
 flask = "^1.1.1"
+flask-login = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -25,7 +26,8 @@ yapf = "^0.29.0"
 pylint = "^2.4.4"
 
 [tool.poetry.scripts]
-github_upload_package = "private_pypi.pkg_repos.github:github_upload_package_cli"
+private_pypi_run_server = "private_pypi.server:run_server_cli"
+private_pypi_github_upload_package = "private_pypi.pkg_repos.github:github_upload_package_cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
