--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,12 @@ description = "A private PyPI server powered by backend(s) like GitHub."
 license = "MIT"
 authors = ["huntzhan <huntzhan.dev@gmail.com>"]
 readme = "README.md"
+repository = "https://github.com/python-best-practices/private-pypi"
+keywords = ["private", "pypi", "github", "packaging", "dependency"]
+classifiers = [
+    "Topic :: Software Development :: Build Tools",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
 
 [tool.poetry.dependencies]
 # TODO: Will support all python versions in the future
