--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ fire = "^0.2.1"
 Jinja2 = "^2.11.1"
 flask = "^1.1.1"
 flask-login = "^0.5.0"
+psutil = "^5.6.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
