--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ Jinja2 = "^2.11.1"
 flask = "^1.1.1"
 flask-login = "^0.5.0"
 psutil = "^5.6.7"
+waitress = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
