--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ flask = "^1.1.1"
 flask-login = "^0.5.0"
 psutil = "^5.6.7"
 waitress = "^1.4.3"
+Paste = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
