Move backends to private_pypi_backends

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
 ]
 packages = [
     { include = "private_pypi" },
+    { include = "private_pypi_backends" },
     { include = "private_pypi_testkit" },
 ]
 
