--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ apscheduler = "^3.6.3"
 pytest = "^5.2"
 yapf = "^0.29.0"
 pylint = "^2.4.4"
+twine = "^3.1.1"
 
 [tool.poetry.scripts]
 private_pypi_server = "private_pypi.server:run_server_cli"
