--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,25 @@ jobs:
         pylint private_pypi_testkit
         yapf -d -r --style='{based_on_style: google, continuation_indent_width: 8, dedent_closing_brackets: false, column_limit: 100}' private_pypi_testkit
 
-    - name: Publish.
+ publish:
+  needs: [ci]
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup python
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.8'
+
+    - name: Setup pip/poetry
+      run: |
+        pip install -U pip poetry
+        pip --version
+        poetry --version
+        poetry config virtualenvs.create false
+
+    - name: Publish to PyPI.
       run: |
         poetry build
         twine upload --skip-existing dist/*
