--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
         pip install -U pip poetry twine
         pip --version
         poetry --version
+        twine --version
         poetry config virtualenvs.create false
 
     - name: Publish to PyPI.
