--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
 
  publish:
   needs: [ci]
-  if: github.ref == 'master'
+  if: github.ref == 'refs/heads/master'
   runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v2
