--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "private-pypi-core"
-version = "0.1.3-alpha.2"
+version = "0.1.3-alpha.3"
 description = "A private PyPI server powered by flexible backends."
 license = "MIT"
 authors = ["huntzhan <huntzhan.dev@gmail.com>"]
@@ -12,7 +12,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 packages = [
-    { include = "private_pypi" },
+    { include = "private_pypi_core" },
     { include = "private_pypi_backends" },
     { include = "private_pypi_testkit" },
 ]
@@ -42,7 +42,7 @@ pylint = "^2.4.4"
 twine = "^3.1.1"
 
 [tool.poetry.scripts]
-private_pypi_server = "private_pypi.server:run_server_cli"
+private_pypi_server = "private_pypi_core.server:run_server_cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
