--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
 
     services:
       private-pypi:
-        image: privatepypi/private-pypi:0.1.0a14
+        image: privatepypi/private-pypi:0.2.0
         ports:
           - 8888:8888
         volumes:
