--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
 [tool.poetry]
-name = "private-pypi-core"
+name = "pywharf-core"
 version = "0.2.0"
 description = "A private PyPI server powered by flexible backends."
 license = "MIT"
 authors = ["huntzhan <huntzhan.dev@gmail.com>"]
 readme = "README.md"
-repository = "https://github.com/private-pypi/private-pypi-core"
+repository = "https://github.com/pywharf/pywharf-core"
 keywords = ["private", "pypi", "packaging", "dependency"]
 classifiers = [
     "Topic :: Software Development :: Build Tools",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 packages = [
-    { include = "private_pypi_core" },
-    { include = "private_pypi_backends" },
-    { include = "private_pypi_testkit" },
+    { include = "pywharf_core" },
+    { include = "pywharf_backends" },
+    { include = "pywharf_testkit" },
 ]
 
 [tool.poetry.dependencies]
@@ -42,8 +42,8 @@ pylint = "^2.4.4"
 twine = "^3.1.1"
 
 [tool.poetry.scripts]
-private_pypi_server = "private_pypi_core.server:run_server_cli"
-private_pypi_update_index = "private_pypi_core.workflow:update_index_cli"
+pywharf_server = "pywharf_core.server:run_server_cli"
+pywharf_update_index = "pywharf_core.workflow:update_index_cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
