--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,13 @@ jobs:
 
       - name: Lint.
         run: |
-          pylint pywharf_core
+          flake8 pywharf_core
           yapf -d -r --style="$YAPF_STYLE" pywharf_core
 
-          pylint pywharf_backends
+          flake8 pywharf_backends
           yapf -d -r --style="$YAPF_STYLE" pywharf_backends
 
-          pylint pywharf_testkit
+          flake8 pywharf_testkit
           yapf -d -r --style="$YAPF_STYLE" pywharf_testkit
         env:
           YAPF_STYLE: '{based_on_style: google, continuation_indent_width: 8, dedent_closing_brackets: false, column_limit: 100}'
