--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,12 +34,13 @@ cryptography = "^2.8"
 redis-server = "^5.0.7"
 dramatiq = {extras = ["redis"], version = "^1.8.1"}
 apscheduler = "^3.6.3"
+lxml = "^4.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 yapf = "^0.29.0"
-pylint = "^2.4.4"
 twine = "^3.1.1"
+flake8 = "^3.8.3"
 
 [tool.poetry.scripts]
 pywharf_server = "pywharf_core.server:run_server_cli"
